Run Gradle in CI, update conventions  (#20)
* Add missing jars to publishing

* Fix script path

* Fix conventions and switch to CI vault

* Run Gradle in CI, fix failing tests

* Use an image with Java

* Fix snyk tests on M1 Mac

* Try differenct CI image

* Bump JDK version in CI

* CI needs to use a VM

* Fix image publishing ans snyk test

* Add jdk provisioning wrapper and switch it to 17

* Fix example builds in pipeline

* Use conventions plugin on the plugin build itself

* Publish 0.0.6

* Assert less specific message

* Revert "Publish 0.0.6"

This reverts commit 8c9d9b972f07a0082eb829ebb040ac8fa65fc183.

* Use conventions in example

* Update tools to latest version

* Fix examples

* Fix examples for good

* Fix JDK wrapper download URL

* Release 0.0.7

* Fix failing test

* Use new version of plugin

* fix docker-full exmaple

* Use settings plugin with docker-elastic

* run gradlew check with --continue

* Add retries for vault

* Use a larger VM for quicker integration tests

* Annother attempt to fix failing tests

* Skip emulation test in CI